White box progress

--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1081,6 +1081,12 @@ PlayerStart.Actor=True
 Generic.Surface Materials=True
 Generic.Geometry=True
 Generic.Surface Properties=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
