--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -724,6 +724,12 @@ NewLevelDialog.TimeStamp=2018.09.24-23.21.23
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2018.09.24-23.21.14
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2018.09.24-23.21.32
+StaticMeshEditor.LastCompileMethod=Unknown
+Voice.TimeStamp=2018.09.24-23.21.36
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2018.09.24-23.21.22
+MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -744,7 +750,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Other/Elf
+ContentBrowserTab1.SelectedPaths=/Classes_Game/ElfBowling
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -806,9 +812,14 @@ bSCCUseGlobalSettings=False
 bUseUnsortedMenus=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Other/Elf/Wally
-MRUItem1=/Game/MyContent/Maps/Main
-MRUItem2=/Game/Other/Elf/M_Elf
+MRUItem0=/Game/MyContent/Materials/M_LightBlue
+MRUItem1=/Game/MyContent/Materials/M_Red
+MRUItem2=/Game/MyContent/Materials/M_Grey
+MRUItem3=/Game/MyContent/Materials/M_Black
+MRUItem4=/Game/MyContent/Materials/M_White
+MRUItem5=/Game/Other/Elf/Wally
+MRUItem6=/Game/MyContent/Maps/Main
+MRUItem7=/Game/Other/Elf/M_Elf
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1087,10 +1098,80 @@ BP_Sky_Sphere_C.Override settings=True
 BP_Sky_Sphere_C.Rendering=True
 BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+SkyLightComponent.TransformCommon=True
+SkyLightComponent.Light=True
+SkyLightComponent.DistanceFieldAmbientOcclusion=True
+SkyLightComponent.Rendering=True
+SkyLightComponent.Tags=True
+SkyLightComponent.Cooking=True
+SceneComponent.TransformCommon=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Lighting=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.Lightmass=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.CameraOptions=True
+CameraActor.Color Grading=True
+CameraActor.Film=True
+CameraActor.Mobile Tonemapper=True
+CameraActor.Lens=True
+CameraActor.Rendering Features=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Cooking=True
+CameraActor.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
 /Game/Other/Elf/Wally.Wally=1
+/Game/MyContent/Materials/M_LightBlue.M_LightBlue=1
+/Game/MyContent/Materials/M_White.M_White=1
+/Game/MyContent/Materials/M_Black.M_Black=1
+/Game/MyContent/Materials/M_Grey.M_Grey=1
+/Game/MyContent/Materials/M_Red.M_Red=1
 
 [MaterialEditor]
 PrimType=1
@@ -1131,9 +1212,23 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/MyContent/Materials/M_LightBlue.M_LightBlue;
+RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
+RecentlyPlaced=/Game/MyContent/Materials/M_White.M_White;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/MyContent/Materials/M_Grey.M_Grey;
+RecentlyPlaced=/Game/MyContent/Materials/M_Black.M_Black;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
 RecentlyPlaced=/Game/Other/Elf/Wally.Wally;
 
 [DetailPropertyExpansion]
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush=
+BP_Sky_Sphere_C="\"Object.Override settings.Horizon color\" \"Object.Override settings.Cloud color\" \"Object.Override settings.Overall Color\" "
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
 
 
