Destroy ball class created

--- a/ElfBowling/Config/DefaultGame.ini
+++ b/ElfBowling/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=788BEE894A704050F58C65A2BF3638AF
+CopyrightNotice=Thomas Arthur Simon
 
 [StartupActions]
 bAddPacks=True
