Added to classes

--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,7 +106,7 @@ MRUItem0=/Game/MyContent/Maps/Main
 LastLevel=/Game/MyContent/Maps/Main
 
 [ModuleFileTracking]
-ElfBowling.TimeStamp=2018.12.08-13.48.32
+ElfBowling.TimeStamp=2018.12.09-13.03.35
 ElfBowling.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.09.24-23.21.24
 PakFile.LastCompileMethod=Unknown
@@ -812,14 +812,15 @@ bSCCUseGlobalSettings=False
 bUseUnsortedMenus=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyContent/Materials/M_LightBlue
-MRUItem1=/Game/MyContent/Materials/M_Red
-MRUItem2=/Game/MyContent/Materials/M_Grey
-MRUItem3=/Game/MyContent/Materials/M_Black
-MRUItem4=/Game/MyContent/Materials/M_White
-MRUItem5=/Game/Other/Elf/Wally
-MRUItem6=/Game/MyContent/Maps/Main
-MRUItem7=/Game/Other/Elf/M_Elf
+MRUItem0=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
+MRUItem1=/Game/MyContent/Materials/M_LightBlue
+MRUItem2=/Game/MyContent/Materials/M_Red
+MRUItem3=/Game/MyContent/Materials/M_Grey
+MRUItem4=/Game/MyContent/Materials/M_Black
+MRUItem5=/Game/MyContent/Materials/M_White
+MRUItem6=/Game/Other/Elf/Wally
+MRUItem7=/Game/MyContent/Maps/Main
+MRUItem8=/Game/Other/Elf/M_Elf
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1163,6 +1164,10 @@ CameraActor.Tags=True
 CameraActor.Activation=True
 CameraActor.Cooking=True
 CameraActor.Actor=True
+Bp_ElfBowlingGameModeBase_C.Tick=True
+Bp_ElfBowlingGameModeBase_C.Classes=True
+Bp_ElfBowlingGameModeBase_C.Game=True
+Bp_ElfBowlingGameModeBase_C.GameMode=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
@@ -1172,6 +1177,7 @@ CameraActor.Actor=True
 /Game/MyContent/Materials/M_Black.M_Black=1
 /Game/MyContent/Materials/M_Grey.M_Grey=1
 /Game/MyContent/Materials/M_Red.M_Red=1
+/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase.Bp_ElfBowlingGameModeBase=1
 
 [MaterialEditor]
 PrimType=1
@@ -1230,5 +1236,8 @@ BP_Sky_Sphere_C="\"Object.Override settings.Horizon color\" \"Object.Override se
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[MessageLog]
+LastLogListing=CompilerResultsLog
 
 
