--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,7 +106,7 @@ MRUItem0=/Game/MyContent/Maps/Main
 LastLevel=/Game/MyContent/Maps/Main
 
 [ModuleFileTracking]
-ElfBowling.TimeStamp=2018.12.09-13.03.35
+ElfBowling.TimeStamp=2018.12.09-13.35.17
 ElfBowling.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.09.24-23.21.24
 PakFile.LastCompileMethod=Unknown
@@ -812,15 +812,19 @@ bSCCUseGlobalSettings=False
 bUseUnsortedMenus=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
-MRUItem1=/Game/MyContent/Materials/M_LightBlue
-MRUItem2=/Game/MyContent/Materials/M_Red
-MRUItem3=/Game/MyContent/Materials/M_Grey
-MRUItem4=/Game/MyContent/Materials/M_Black
-MRUItem5=/Game/MyContent/Materials/M_White
-MRUItem6=/Game/Other/Elf/Wally
-MRUItem7=/Game/MyContent/Maps/Main
-MRUItem8=/Game/Other/Elf/M_Elf
+MRUItem0=/Game/MyContent/Blueprints/BP_something
+MRUItem1=/Game/MyContent/Blueprints/Bp_PlayerPawn
+MRUItem2=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
+MRUItem3=/Game/MyContent/Meshes/SM_Marker
+MRUItem4=/Game/MyContent/Blueprints/Bp_BowlingBall
+MRUItem5=/Game/MyContent/Materials/M_LightBlue
+MRUItem6=/Game/MyContent/Materials/M_Red
+MRUItem7=/Game/MyContent/Materials/M_Grey
+MRUItem8=/Game/MyContent/Materials/M_Black
+MRUItem9=/Game/MyContent/Materials/M_White
+MRUItem10=/Game/Other/Elf/Wally
+MRUItem11=/Game/MyContent/Maps/Main
+MRUItem12=/Game/Other/Elf/M_Elf
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1168,6 +1172,172 @@ Bp_ElfBowlingGameModeBase_C.Tick=True
 Bp_ElfBowlingGameModeBase_C.Classes=True
 Bp_ElfBowlingGameModeBase_C.Game=True
 Bp_ElfBowlingGameModeBase_C.GameMode=True
+Bp_BowlingBall_C.Tick=True
+Bp_BowlingBall_C.Rendering=True
+Bp_BowlingBall_C.Replication=True
+Bp_BowlingBall_C.Input=True
+Bp_BowlingBall_C.Actor=True
+Bp_BowlingBall_C.Variable=True
+Bp_BowlingBall_C.TransformCommon=True
+Bp_BowlingBall_C.Sockets=True
+Bp_BowlingBall_C.StaticMesh=True
+Bp_BowlingBall_C.Physics=True
+Bp_BowlingBall_C.Collision=True
+Bp_BowlingBall_C.Lighting=True
+Bp_BowlingBall_C.Tags=True
+Bp_BowlingBall_C.ComponentReplication=True
+Bp_BowlingBall_C.Cooking=True
+Bp_BowlingBall_C.Events=True
+Bp_BowlingBall_C.Materials=True
+REINST_Bp_BowlingBall_C_31.Variable=True
+REINST_Bp_BowlingBall_C_31.TransformCommon=True
+REINST_Bp_BowlingBall_C_31.Sockets=True
+REINST_Bp_BowlingBall_C_31.StaticMesh=True
+REINST_Bp_BowlingBall_C_31.Materials=True
+REINST_Bp_BowlingBall_C_31.Physics=True
+REINST_Bp_BowlingBall_C_31.Collision=True
+REINST_Bp_BowlingBall_C_31.Lighting=True
+REINST_Bp_BowlingBall_C_31.Rendering=True
+REINST_Bp_BowlingBall_C_31.Tags=True
+REINST_Bp_BowlingBall_C_31.ComponentReplication=True
+REINST_Bp_BowlingBall_C_31.Cooking=True
+REINST_Bp_BowlingBall_C_31.Events=True
+REINST_Bp_BowlingBall_C_35.Variable=True
+REINST_Bp_BowlingBall_C_35.TransformCommon=True
+REINST_Bp_BowlingBall_C_35.Sockets=True
+REINST_Bp_BowlingBall_C_35.StaticMesh=True
+REINST_Bp_BowlingBall_C_35.Materials=True
+REINST_Bp_BowlingBall_C_35.Physics=True
+REINST_Bp_BowlingBall_C_35.Collision=True
+REINST_Bp_BowlingBall_C_35.Lighting=True
+REINST_Bp_BowlingBall_C_35.Rendering=True
+REINST_Bp_BowlingBall_C_35.Tags=True
+REINST_Bp_BowlingBall_C_35.ComponentReplication=True
+REINST_Bp_BowlingBall_C_35.Cooking=True
+REINST_Bp_BowlingBall_C_35.Events=True
+REINST_Bp_BowlingBall_C_39.Variable=True
+REINST_Bp_BowlingBall_C_39.TransformCommon=True
+REINST_Bp_BowlingBall_C_39.Sockets=True
+REINST_Bp_BowlingBall_C_39.StaticMesh=True
+REINST_Bp_BowlingBall_C_39.Materials=True
+REINST_Bp_BowlingBall_C_39.Physics=True
+REINST_Bp_BowlingBall_C_39.Collision=True
+REINST_Bp_BowlingBall_C_39.Lighting=True
+REINST_Bp_BowlingBall_C_39.Rendering=True
+REINST_Bp_BowlingBall_C_39.Tags=True
+REINST_Bp_BowlingBall_C_39.ComponentReplication=True
+REINST_Bp_BowlingBall_C_39.Cooking=True
+REINST_Bp_BowlingBall_C_39.Events=True
+DestroyBall.TransformCommon=True
+DestroyBall.DestroyBall=True
+DestroyBall.Rendering=True
+DestroyBall.Input=True
+DestroyBall.Actor=True
+BoxComponent.TransformCommon=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Rendering=True
+BoxComponent.Tags=True
+BoxComponent.Cooking=True
+Bp_PlayerPawn_C.Tick=True
+Bp_PlayerPawn_C.Projectile=True
+Bp_PlayerPawn_C.Pawn=True
+Bp_PlayerPawn_C.Camera=True
+Bp_PlayerPawn_C.Rendering=True
+Bp_PlayerPawn_C.Replication=True
+Bp_PlayerPawn_C.Input=True
+Bp_PlayerPawn_C.Actor=True
+Bp_PlayerPawn_C.Variable=True
+Bp_PlayerPawn_C.TransformCommon=True
+Bp_PlayerPawn_C.Sockets=True
+Bp_PlayerPawn_C.StaticMesh=True
+Bp_PlayerPawn_C.Physics=True
+Bp_PlayerPawn_C.Collision=True
+Bp_PlayerPawn_C.Lighting=True
+Bp_PlayerPawn_C.Tags=True
+Bp_PlayerPawn_C.ComponentReplication=True
+Bp_PlayerPawn_C.Cooking=True
+Bp_PlayerPawn_C.Events=True
+Bp_PlayerPawn_C.Materials=True
+Main_C.Tick=True
+Main_C.Replication=True
+Main_C.Input=True
+Main_C.Actor=True
+REINST_Bp_PlayerPawn_C_45.Variable=True
+REINST_Bp_PlayerPawn_C_45.TransformCommon=True
+REINST_Bp_PlayerPawn_C_45.Sockets=True
+REINST_Bp_PlayerPawn_C_45.StaticMesh=True
+REINST_Bp_PlayerPawn_C_45.Materials=True
+REINST_Bp_PlayerPawn_C_45.Physics=True
+REINST_Bp_PlayerPawn_C_45.Collision=True
+REINST_Bp_PlayerPawn_C_45.Lighting=True
+REINST_Bp_PlayerPawn_C_45.Rendering=True
+REINST_Bp_PlayerPawn_C_45.Tags=True
+REINST_Bp_PlayerPawn_C_45.ComponentReplication=True
+REINST_Bp_PlayerPawn_C_45.Cooking=True
+REINST_Bp_PlayerPawn_C_45.Events=True
+Bp_PlayerPawn_C.ComponentTick=True
+REINST_Bp_PlayerPawn_C_81.TransformCommon=True
+REINST_Bp_PlayerPawn_C_81.StaticMesh=True
+REINST_Bp_PlayerPawn_C_81.Materials=True
+REINST_Bp_PlayerPawn_C_81.Tick=True
+REINST_Bp_PlayerPawn_C_81.ComponentTick=True
+REINST_Bp_PlayerPawn_C_81.Physics=True
+REINST_Bp_PlayerPawn_C_81.Collision=True
+REINST_Bp_PlayerPawn_C_81.Lighting=True
+REINST_Bp_PlayerPawn_C_81.Rendering=True
+REINST_Bp_PlayerPawn_C_81.Tags=True
+REINST_Bp_PlayerPawn_C_81.ComponentReplication=True
+REINST_Bp_PlayerPawn_C_81.Variable=True
+REINST_Bp_PlayerPawn_C_81.Cooking=True
+REINST_Bp_PlayerPawn_C_81.Projectile=True
+REINST_Bp_PlayerPawn_C_81.Pawn=True
+REINST_Bp_PlayerPawn_C_81.Camera=True
+REINST_Bp_PlayerPawn_C_81.Replication=True
+REINST_Bp_PlayerPawn_C_81.Input=True
+REINST_Bp_PlayerPawn_C_81.Actor=True
+BP_something_C.Tick=True
+BP_something_C.Projectile=True
+BP_something_C.Pawn=True
+BP_something_C.Camera=True
+BP_something_C.Rendering=True
+BP_something_C.Replication=True
+BP_something_C.Input=True
+BP_something_C.Actor=True
+BP_something_C.Variable=True
+BP_something_C.TransformCommon=True
+BP_something_C.Sockets=True
+BP_something_C.StaticMesh=True
+BP_something_C.Physics=True
+BP_something_C.Collision=True
+BP_something_C.Lighting=True
+BP_something_C.Tags=True
+BP_something_C.ComponentReplication=True
+BP_something_C.Cooking=True
+BP_something_C.Events=True
+BP_something_C.Materials=True
+BP_something_C.ComponentTick=True
+REINST_BP_something_C_87.TransformCommon=True
+REINST_BP_something_C_87.StaticMesh=True
+REINST_BP_something_C_87.Materials=True
+REINST_BP_something_C_87.Tick=True
+REINST_BP_something_C_87.ComponentTick=True
+REINST_BP_something_C_87.Physics=True
+REINST_BP_something_C_87.Collision=True
+REINST_BP_something_C_87.Lighting=True
+REINST_BP_something_C_87.Rendering=True
+REINST_BP_something_C_87.Tags=True
+REINST_BP_something_C_87.ComponentReplication=True
+REINST_BP_something_C_87.Variable=True
+REINST_BP_something_C_87.Cooking=True
+REINST_BP_something_C_87.Projectile=True
+REINST_BP_something_C_87.Pawn=True
+REINST_BP_something_C_87.Camera=True
+REINST_BP_something_C_87.Replication=True
+REINST_BP_something_C_87.Input=True
+REINST_BP_something_C_87.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
@@ -1178,6 +1348,11 @@ Bp_ElfBowlingGameModeBase_C.GameMode=True
 /Game/MyContent/Materials/M_Grey.M_Grey=1
 /Game/MyContent/Materials/M_Red.M_Red=1
 /Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase.Bp_ElfBowlingGameModeBase=1
+/Game/MyContent/Blueprints/Bp_BowlingBall.Bp_BowlingBall=1
+/Game/MyContent/Meshes/SM_Marker.SM_Marker=1
+/Game/MyContent/Maps/Main.Main:PersistentLevel.Main=1
+/Game/MyContent/Blueprints/Bp_PlayerPawn.Bp_PlayerPawn=1
+/Game/MyContent/Blueprints/BP_something.BP_something=1
 
 [MaterialEditor]
 PrimType=1
@@ -1218,8 +1393,11 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [PlacementMode]
-RecentlyPlaced=/Game/MyContent/Materials/M_LightBlue.M_LightBlue;
+RecentlyPlaced=/Game/MyContent/Blueprints/Bp_PlayerPawn.Bp_PlayerPawn;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
+RecentlyPlaced=/Script/ElfBowling.DestroyBall;
+RecentlyPlaced=/Game/MyContent/Blueprints/Bp_BowlingBall.Bp_BowlingBall;
+RecentlyPlaced=/Game/MyContent/Materials/M_LightBlue.M_LightBlue;
 RecentlyPlaced=/Game/MyContent/Materials/M_White.M_White;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/MyContent/Materials/M_Grey.M_Grey;
@@ -1229,7 +1407,7 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Woo
 RecentlyPlaced=/Game/Other/Elf/Wally.Wally;
 
 [DetailPropertyExpansion]
-Brush=
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_Sky_Sphere_C="\"Object.Override settings.Horizon color\" \"Object.Override settings.Cloud color\" \"Object.Override settings.Overall Color\" "
 
 [LightingBuildOptions]
@@ -1239,5 +1417,9 @@ OnlyBuildVisibility=False
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
+
+[DetailCategoriesAdvanced]
+Brush.Geometry=False
+Brush.BrushSettings=True
 
 
