--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,7 +106,7 @@ MRUItem0=/Game/MyContent/Maps/Main
 LastLevel=/Game/MyContent/Maps/Main
 
 [ModuleFileTracking]
-ElfBowling.TimeStamp=2018.12.09-13.35.17
+ElfBowling.TimeStamp=2018.12.09-13.55.10
 ElfBowling.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.09.24-23.21.24
 PakFile.LastCompileMethod=Unknown
@@ -733,6 +733,7 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -812,19 +813,20 @@ bSCCUseGlobalSettings=False
 bUseUnsortedMenus=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyContent/Blueprints/BP_something
-MRUItem1=/Game/MyContent/Blueprints/Bp_PlayerPawn
-MRUItem2=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
-MRUItem3=/Game/MyContent/Meshes/SM_Marker
-MRUItem4=/Game/MyContent/Blueprints/Bp_BowlingBall
-MRUItem5=/Game/MyContent/Materials/M_LightBlue
-MRUItem6=/Game/MyContent/Materials/M_Red
-MRUItem7=/Game/MyContent/Materials/M_Grey
-MRUItem8=/Game/MyContent/Materials/M_Black
-MRUItem9=/Game/MyContent/Materials/M_White
-MRUItem10=/Game/Other/Elf/Wally
-MRUItem11=/Game/MyContent/Maps/Main
-MRUItem12=/Game/Other/Elf/M_Elf
+MRUItem0=/Game/MyContent/Blueprints/Bp_PlayerPawn2
+MRUItem1=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
+MRUItem2=/Game/MyContent/Blueprints/BP_something
+MRUItem3=/Game/MyContent/Blueprints/Bp_PlayerPawn
+MRUItem4=/Game/MyContent/Meshes/SM_Marker
+MRUItem5=/Game/MyContent/Blueprints/Bp_BowlingBall
+MRUItem6=/Game/MyContent/Materials/M_LightBlue
+MRUItem7=/Game/MyContent/Materials/M_Red
+MRUItem8=/Game/MyContent/Materials/M_Grey
+MRUItem9=/Game/MyContent/Materials/M_Black
+MRUItem10=/Game/MyContent/Materials/M_White
+MRUItem11=/Game/Other/Elf/Wally
+MRUItem12=/Game/MyContent/Maps/Main
+MRUItem13=/Game/Other/Elf/M_Elf
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1338,6 +1340,55 @@ REINST_BP_something_C_87.Camera=True
 REINST_BP_something_C_87.Replication=True
 REINST_BP_something_C_87.Input=True
 REINST_BP_something_C_87.Actor=True
+Bp_PlayerPawn_C.ArrowComponent=True
+REINST_Bp_something_C_115.Variable=True
+REINST_Bp_something_C_115.TransformCommon=True
+REINST_Bp_something_C_115.Sockets=True
+REINST_Bp_something_C_115.StaticMesh=True
+REINST_Bp_something_C_115.Materials=True
+REINST_Bp_something_C_115.Physics=True
+REINST_Bp_something_C_115.Collision=True
+REINST_Bp_something_C_115.Lighting=True
+REINST_Bp_something_C_115.Rendering=True
+REINST_Bp_something_C_115.Tags=True
+REINST_Bp_something_C_115.ComponentReplication=True
+REINST_Bp_something_C_115.Cooking=True
+REINST_Bp_something_C_115.Events=True
+Bp_PlayerPawn2_C.TransformCommon=True
+Bp_PlayerPawn2_C.StaticMesh=True
+Bp_PlayerPawn2_C.Tick=True
+Bp_PlayerPawn2_C.ComponentTick=True
+Bp_PlayerPawn2_C.Physics=True
+Bp_PlayerPawn2_C.Collision=True
+Bp_PlayerPawn2_C.Lighting=True
+Bp_PlayerPawn2_C.Rendering=True
+Bp_PlayerPawn2_C.Tags=True
+Bp_PlayerPawn2_C.ComponentReplication=True
+Bp_PlayerPawn2_C.Variable=True
+Bp_PlayerPawn2_C.Cooking=True
+Bp_PlayerPawn2_C.ArrowComponent=True
+Bp_PlayerPawn2_C.Projectile=True
+Bp_PlayerPawn2_C.Pawn=True
+Bp_PlayerPawn2_C.Camera=True
+Bp_PlayerPawn2_C.Replication=True
+Bp_PlayerPawn2_C.Input=True
+Bp_PlayerPawn2_C.Actor=True
+Bp_PlayerPawn2_C.Materials=True
+Bp_PlayerPawn2_C.Sockets=True
+Bp_PlayerPawn2_C.Events=True
+REINST_Bp_PlayerPawn2_C_135.Variable=True
+REINST_Bp_PlayerPawn2_C_135.TransformCommon=True
+REINST_Bp_PlayerPawn2_C_135.Sockets=True
+REINST_Bp_PlayerPawn2_C_135.StaticMesh=True
+REINST_Bp_PlayerPawn2_C_135.Materials=True
+REINST_Bp_PlayerPawn2_C_135.Physics=True
+REINST_Bp_PlayerPawn2_C_135.Collision=True
+REINST_Bp_PlayerPawn2_C_135.Lighting=True
+REINST_Bp_PlayerPawn2_C_135.Rendering=True
+REINST_Bp_PlayerPawn2_C_135.Tags=True
+REINST_Bp_PlayerPawn2_C_135.ComponentReplication=True
+REINST_Bp_PlayerPawn2_C_135.Cooking=True
+REINST_Bp_PlayerPawn2_C_135.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
@@ -1393,6 +1444,7 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2;
 RecentlyPlaced=/Game/MyContent/Blueprints/Bp_PlayerPawn.Bp_PlayerPawn;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Script/ElfBowling.DestroyBall;
