--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,7 +106,7 @@ MRUItem0=/Game/MyContent/Maps/Main
 LastLevel=/Game/MyContent/Maps/Main
 
 [ModuleFileTracking]
-ElfBowling.TimeStamp=2018.12.09-13.55.10
+ElfBowling.TimeStamp=2018.12.09-14.10.43
 ElfBowling.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.09.24-23.21.24
 PakFile.LastCompileMethod=Unknown
@@ -733,7 +733,6 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1404,6 +1403,7 @@ REINST_Bp_PlayerPawn2_C_135.Events=True
 /Game/MyContent/Maps/Main.Main:PersistentLevel.Main=1
 /Game/MyContent/Blueprints/Bp_PlayerPawn.Bp_PlayerPawn=1
 /Game/MyContent/Blueprints/BP_something.BP_something=1
+/Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2=1
 
 [MaterialEditor]
 PrimType=1
