--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,7 +106,7 @@ MRUItem0=/Game/MyContent/Maps/Main
 LastLevel=/Game/MyContent/Maps/Main
 
 [ModuleFileTracking]
-ElfBowling.TimeStamp=2018.12.09-14.10.43
+ElfBowling.TimeStamp=2018.12.09-15.00.01
 ElfBowling.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.09.24-23.21.24
 PakFile.LastCompileMethod=Unknown
@@ -1388,6 +1388,24 @@ REINST_Bp_PlayerPawn2_C_135.Tags=True
 REINST_Bp_PlayerPawn2_C_135.ComponentReplication=True
 REINST_Bp_PlayerPawn2_C_135.Cooking=True
 REINST_Bp_PlayerPawn2_C_135.Events=True
+REINST_Bp_PlayerPawn2_C_151.Tick=True
+REINST_Bp_PlayerPawn2_C_151.Projectile=True
+REINST_Bp_PlayerPawn2_C_151.Pawn=True
+REINST_Bp_PlayerPawn2_C_151.Camera=True
+REINST_Bp_PlayerPawn2_C_151.Rendering=True
+REINST_Bp_PlayerPawn2_C_151.Replication=True
+REINST_Bp_PlayerPawn2_C_151.Input=True
+REINST_Bp_PlayerPawn2_C_151.Actor=True
+Bp_PlayerPawn2_C.PlayerPawn=True
+REINST_Bp_PlayerPawn2_C_163.Projectile=True
+REINST_Bp_PlayerPawn2_C_163.Tick=True
+REINST_Bp_PlayerPawn2_C_163.PlayerPawn=True
+REINST_Bp_PlayerPawn2_C_163.Pawn=True
+REINST_Bp_PlayerPawn2_C_163.Camera=True
+REINST_Bp_PlayerPawn2_C_163.Rendering=True
+REINST_Bp_PlayerPawn2_C_163.Replication=True
+REINST_Bp_PlayerPawn2_C_163.Input=True
+REINST_Bp_PlayerPawn2_C_163.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
@@ -1461,11 +1479,74 @@ RecentlyPlaced=/Game/Other/Elf/Wally.Wally;
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_Sky_Sphere_C="\"Object.Override settings.Horizon color\" \"Object.Override settings.Cloud color\" \"Object.Override settings.Overall Color\" "
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" "
+Object=
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[DetailCustomWidgetExpansion]
+CryptoKeysSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+GeneralProjectSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+GameplayTagsSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+GameMapsSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+MoviePlayerSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+ProjectPackagingSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+HardwareTargetingSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+AssetManagerSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+AISystem=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+AnimationSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+AudioSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+CollisionProfile=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+ConsoleSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+CookerSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+CrowdManager=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+GameplayDebuggerConfig=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+GarbageCollectionSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+Engine=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+HierarchicalLODSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+InputSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+RecastNavMesh=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+NavigationSystemV1=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+NetworkSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+PhysicsSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+RendererSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+RendererOverrideSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+SlateSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+StreamingSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+TutorialSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+UserInterfaceSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+LevelEditor2DSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+EditorProjectAppearanceSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+BlueprintEditorProjectSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+ClassViewerProjectSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+ProxyLODMeshSimplificationSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+MovieSceneToolsProjectSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+MeshSimplificationSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+PaperImporterSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+UMGEditorProjectSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+AndroidRuntimeSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+ShaderPlatformQualitySettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+AndroidSDKSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+HTML5TargetSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+IOSRuntimeSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+LinuxTargetSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+MacTargetSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+LuminRuntimeSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+MagicLeapSDKSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+WindowsTargetSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+AvfMediaSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+ImgMediaSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+LevelSequenceEditorSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+MagicLeapEmulatorSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+MagicLeapSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+OculusHMDRuntimeSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+PaperRuntimeSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+TcpMessagingSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+UdpMessagingSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
+WmfMediaSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
