--- a/ElfBowling/Config/DefaultInput.ini
+++ b/ElfBowling/Config/DefaultInput.ini
@@ -44,10 +44,11 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Launch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="Move",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Move",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="Rotate",Scale=-1.000000,Key=Left)
-+AxisMappings=(AxisName="Rotate",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Rotate",Scale=-0.500000,Key=Left)
++AxisMappings=(AxisName="Rotate",Scale=0.500000,Key=Right)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
